criacao de usuario e post pela interface

--- a/WebApplicationProjeto/wwwroot/index.html
+++ b/WebApplicationProjeto/wwwroot/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Oi</h1>
     <a href="usuarioForm.html">Criar usuario</a>
+    <br>
+    <a href="postForm.html">Cria comentario</a>
 </body>
 <script src="index.js"></script>
 </html>
