--- a/WebApplicationProjeto/wwwroot/usuarioForm.html
+++ b/WebApplicationProjeto/wwwroot/usuarioForm.html
@@ -16,6 +16,8 @@
 
         <button type="submit" id="btn_salvar">salvar</button>
     </form>
+
+    <div class="message" id="message" name="message"></div>
 </body>
 <script src="usuarioForm.js"></script>
 </html>
