--- a/WebApplicationProjeto/wwwroot/index.html
+++ b/WebApplicationProjeto/wwwroot/index.html
@@ -6,10 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Oi</h1>
+    <h1>Comentários e posts</h1>
     <a href="usuarioForm.html">Criar usuario</a>
     <br>
     <a href="postForm.html">Cria comentario</a>
+    <br>
+    <a href="listaPost.html">Fazer comentario num post</a>
 </body>
 <script src="index.js"></script>
 </html>
