Listagem de comentários e o banco

--- a/WebApplicationProjeto/wwwroot/comentarioForm.html
+++ b/WebApplicationProjeto/wwwroot/comentarioForm.html
@@ -10,12 +10,12 @@
     <h1>Fazer comentario</h1>
     <form action="" id="comentarioForm" name="comentarioForm">
 
-        <select name="nome_usuario" id="nome_usuario">
-            <option value="0">Selecione um usuário</option>
+        <select required name="nome_usuario" id="nome_usuario">
+            <option value="">Selecione um usuário</option>
         </select>
         <br> <br>
 
-        <textarea name="comentario_texto" id="comentario_texto" cols="30" rows="10"></textarea>
+        <textarea required name="comentario_texto" id="comentario_texto" cols="30" rows="10"></textarea>
         <br> <br>
         <button type="submit">Comentar</button>
     </form>
