--- a/WebApplicationProjeto/wwwroot/index.html
+++ b/WebApplicationProjeto/wwwroot/index.html
@@ -11,7 +11,7 @@
     <br>
     <a href="postForm.html">Cria comentario</a>
     <br>
-    <a href="listaPost.html">Fazer comentario num post</a>
+    <a href="listaPost.html">Ver publicações</a>
 </body>
 <script src="index.js"></script>
 </html>
