--- a/WebApplicationProjeto/wwwroot/listaComentario.html
+++ b/WebApplicationProjeto/wwwroot/listaComentario.html
@@ -10,9 +10,8 @@
     
     <table id="tabela" name="tabela" class="tabela" border="1">
         <thead>
-            <th>Publicação</th>
-            <th>Comentar</th>
-            <th>Ver comentários</th>
+            <th>Comentario</th>
+            <th>usuario</th>
         </thead>
         <tbody>
             
@@ -20,5 +19,5 @@
     </table>
 
 </body>
-<script src="listaPost.js"></script>
+<script src="listaComentario.js"></script>
 </html>
