--- a/WebApplicationProjeto/wwwroot/usuarioForm.html
+++ b/WebApplicationProjeto/wwwroot/usuarioForm.html
@@ -9,10 +9,10 @@
     <h1>Formulário para criar usuário</h1>
     <form action="" method="post" id="usuarioForm" name="usuarioForm" class="usuarioForm">
         <label for="nome">Nome</label>
-        <input type="text" id="nome">
+        <input required type="text" id="nome">
 
         <label for="email">Email</label>
-        <input type="text" id="email">
+        <input required type="text" id="email">
 
         <button type="submit" id="btn_salvar">salvar</button>
     </form>
